<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <org.osmdroid.views.MapView android:id="@+id/map_osm"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp" />
            </LinearLayout>


            <!-- Buttons and icons -->
            <TableLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <!-- Session name row -->
                <TableRow>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">




                        <TextView
                            android:layout_alignParentRight="true"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/activitySession_session_id"
                            android:textSize="@dimen/session_client_name_textsize"
                            android:text="1111"
                            android:fontFamily="sans-serif"
                            android:textStyle="italic"
                            android:background="@null"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />

                    </LinearLayout>
                </TableRow>

                <!-- Session description row -->
                <TableRow>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:layout_alignParentRight="true"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/activitySession_session_description"
                            android:textSize="@dimen/session_client_description_textsize"
                            android:fontFamily="sans-serif"
                            android:textStyle="italic"
                            android:background="@null"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="222"
                            />

                    </LinearLayout>
                </TableRow>

                <!-- GPS button row -->
                <TableRow>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <ToggleButton android:id="@+id/buttonOnOff"
                                android:layout_width="wrap_content"
                                android:width="240dp"
                                android:layout_height="wrap_content"
                                android:textOn="@string/btn_stop_logging"
                                android:textOff="@string/btn_start_logging"
                                android:textColor="@android:color/white"
                                android:background="@color/blue"
                                android:textSize="18sp"
                                android:layout_marginBottom="22dp"
                                android:layout_marginTop="24dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                            android:onClick=""
                                />

                    </LinearLayout>

                </TableRow>

                <!-- Icons row -->
                <TableRow
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    >

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:useDefaultMargins="true"
                        android:alignmentMode="alignBounds"
                        android:columnOrderPreserved="false"
                        android:columnCount="4"
                        android:rowCount="3"
                        >

                        <!-- Images row 1 -->
                        <ImageView
                            android:id="@+id/simpleview_imgSatelliteCount"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:layout_gravity="left|center"
                            android:layout_column="0"
                            android:layout_row="0"
                            android:src="@drawable/satellite_count"
                            android:contentDescription="@string/txt_satellites"
                            />

                        <TextView
                            android:id="@+id/simpleview_txtSatelliteCount"
                            android:layout_gravity="left|center"
                            android:layout_width="@dimen/simpleview_grid_labelwidth"
                            android:layout_height="22dp"
                            android:layout_column="1"
                            android:layout_row="0"
                            android:text="3"
                            />


                        <ImageView
                            android:id="@+id/simpleview_imgAccuracy"
                            android:layout_gravity="center|top"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:src="@drawable/accuracy"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:contentDescription="@string/txt_accuracy"
                            />


                        <TextView
                            android:id="@+id/simpleview_txtAccuracy"
                            android:layout_gravity="left|center"
                            android:layout_row="0"

                            android:layout_column="3"
                            android:layout_width="@dimen/simpleview_grid_labelwidth"
                            android:layout_height="wrap_content"
                            android:text="25 meters"
                            />





                        <!-- Images row 2 -->
                        <ImageView
                            android:id="@+id/simpleview_distance"
                            android:layout_gravity="center|top"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:src="@drawable/distance"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:contentDescription="@string/txt_travel_distance"
                            />

                        <TextView
                            android:id="@+id/simpleview_txtDistance"
                            android:layout_gravity="left|center"

                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_row="1"
                            android:text="1560 meters"
                            />

                        <ImageView
                            android:id="@+id/simpleview_points"
                            android:layout_gravity="center|top"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:src="@drawable/points"
                            android:layout_column="2"
                            android:layout_row="1"
                            android:contentDescription="@string/txt_number_of_points"
                            />

                        <TextView
                            android:id="@+id/simpleview_txtPoints"
                            android:layout_gravity="left|center"

                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:layout_row="1"
                            android:text="325"
                            />



                        <!-- Images row 3 -->
                        <ImageView
                            android:id="@+id/simpleview_imgDuration"
                            android:layout_gravity="center|top"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:src="@drawable/duration"
                            android:layout_column="0"
                            android:layout_row="2"
                            android:contentDescription="@string/txt_travel_duration"
                            />

                        <TextView
                            android:id="@+id/simpleview_txtDuration"
                            android:layout_gravity="left|center"
                            android:layout_width="@dimen/simpleview_grid_labelwidth"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_row="2"
                            android:text="2h 15min"
                            />

                        <ImageView
                            android:id="@+id/simpleview_imgSpeed"
                            android:layout_gravity="center|top"
                            android:layout_width="@dimen/simpleview_grid_iconwidth"
                            android:layout_height="@dimen/simlpeview_grid_iconheight"
                            android:src="@drawable/speed"
                            android:layout_column="2"
                            android:layout_row="2"
                            android:contentDescription="@string/txt_speed"
                            />

                        <TextView
                            android:id="@+id/simpleview_txtSpeed"
                            android:layout_gravity="left|center"
                            android:layout_width="@dimen/simpleview_grid_labelwidth"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:layout_row="2"
                            android:text="15 km/s"
                            />



                    </GridLayout>
                </TableRow>


                <!-- Camera button row -->
                <TableRow>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Button android:id="@+id/buttonCamera"
                            android:layout_width="wrap_content"
                            android:width="240dp"
                            android:layout_height="wrap_content"
                            android:text="Camera"
                            android:textColor="@android:color/white"
                            android:background="@color/orange"
                            android:textSize="18sp"
                            android:layout_marginBottom="22dp"
                            android:layout_marginTop="24dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            />

                    </LinearLayout>

                </TableRow>

            </TableLayout>


        </LinearLayout>


    </RelativeLayout>


</ScrollView>